# actor-value-generator

./: AVG_Readme.md  ActorValueExtension.code-workspace  CMakeLists.txt  CMakePresets.json  Debug-Tests.ppj  LEGACY.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: version.rc.in  x64-windows-skse.cmake
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
cmake/ports/commonlibsse-ng/: portfile.cmake  vcpkg.json
contrib/Distribution/Config/: CommonLibSSESamplePlugin.yaml
contrib/Distribution/ESP/: CommonLibSSESamplePluginTest.esp
contrib/Distribution/PapyrusSources/: HitCounter.psc
contrib/Distribution/PapyrusTestSources/: CommonLibSSESampleTest.psc
contrib/Distribution/fomod/: info.xml
include/: API_ActorValueGenerator.h  API_Arithmetic.h  Arthmetic.h  RoguesGallery.h  Serialization.h  Types.h
src/: API_ActorValueGenerator.cpp  API_Arithmetic.cpp  ActorValueExtendedList.h  Addresses.h  BGSEntryPointFunctionDataTwoValue.h  EventSingleton.h  ExtraValue.h  ExtraValueInfo.cpp  ExtraValueInfo.h  ExtraValueStorage.cpp  ExtraValueStorage.h  FileParser.h  FormExtraValueHandler.h  Hooks.h  LegacyFunctions.h  MergeMapperPluginAPI.cpp  MergeMapperPluginAPI.h  PCH.h  Resources.h  TestField.h  Types.h  Utility.h  ValueAliasHandler.h  main.cpp
src/Arthmetic/: ArgumentType.h  ArthmeticConstructor.h  ArthmeticObject.h  ArthmeticParser.h  ArthmeticUtility.h  ArthmeticValue.h  Constructor.h  Coroutine.h  DelegateArgument.cpp  DelegateArgument.h  DelegateExtraData.h  DelegateType.h  DualOperator.h  ExtraData.h  FormulaDelegate.h  FunctionDelegate.h  FunctionInterface.h  IDelegate.h  IDirective.h  IFormula.h  IOperator.h  IReadyArthmetic.cpp  IReadyArthmetic.h  IRoutine.h  OpenOperator.h  OperatorType.h  ParameterSetting.h  Record.h  ResolvedParameter.h  RoutineArgument.h  RoutineDelegate.h  RoutineItem.cpp  RoutineItem.h  RoutineItemType.h  Subroutine.h  TargetType.h  TestField.h
src/Impl/: Enums.h
src/Legacy/: ISerializer.h  LegacySerializer.h  SerialArgument.h  SerialComponent.h  SerialConstructor.h  SerialIterator.h  SerializableList.h  SerializableMap.h  SerializableObject.h  SerializablePair.h  SerializationTypePlayground.h  SerializingWrapper.cpp  SerializingWrapper.h
src/RoguesGallery/: FullName.h  StringHash.h  TemporaryFlag.h  Utility.h
src/Serialization/: ISerializer.h  SerialArgument.h  SerialComponent.h  SerialConstructor.h  SerialIterator.h  SerializableList.h  SerializableMap.h  SerializableObject.h  SerializablePair.h  SerializationTypePlayground.h  SerializingWrapper.cpp  SerializingWrapper.h
src/{deprecated}/Arth/: DualOperator.h  FunctionDelegate.h  OpenOperator.h
